--- a/templates/home/right_filter.html
+++ b/templates/home/right_filter.html
@@ -7,7 +7,7 @@
         <div class="sidebar-body">
             <form action="">
                 
-                <span class="quote-text"><a class="btn btn-primary quote-btn  mb-3" href="{% url 'usersearch' %}" role="button">Message</a></span>
+                <span class="quote-text"><a class="btn btn-primary quote-btn  mb-3" href="" role="button">Message</a></span>
                 <span>
                     <i class="fa fa-question-circle" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi voluptates libero voluptatum. Quaerat quae in soluta perspiciatis earum!" aria-hidden="true"></i>
                 </span>
