--- a/templates/home/right_filter.html
+++ b/templates/home/right_filter.html
@@ -12,7 +12,7 @@
                     <i class="fa fa-question-circle" title="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi voluptates libero voluptatum. Quaerat quae in soluta perspiciatis earum!" aria-hidden="true"></i>
                 </span>
                 <br>
-                <span class="quote-text"><a class="btn btn-primary quote-btn" href="{% url 'ordersupply' %}" role="button">Request reservation</a></span>
+                <span class="quote-text"><a class="btn btn-primary quote-btn" href="" role="button">Request reservation</a></span>
             </form>
             {% if is_favourite %}
             <a href="{% url 'favourite' supply.id %}"  class="quote-text btn btn-danger quote-btn  mt-3">
